--- a/coup_game/assets/css/app.css
+++ b/coup_game/assets/css/app.css
@@ -6,6 +6,16 @@
 
 /* This file is for your main application CSS */
 
+.btn {
+  @apply font-bold py-2 px-4 rounded;
+}
+.btn-blue {
+  @apply bg-blue-500 text-white;
+}
+.btn-blue:hover {
+  @apply bg-blue-700;
+}
+
 /* Alerts and form errors used by phx.new */
 .alert {
   padding: 15px;
