--- a/coup_game/lib/coup_game_web/live/lobby_live.html.heex
+++ b/coup_game/lib/coup_game_web/live/lobby_live.html.heex
@@ -3,13 +3,13 @@
   <p><%= gettext "Card game implmented for the sake of learning new programming language and frameworks;)" %></p>
   <form phx-change="user-settings-change">
   <label for="username">Type your user name:</label><input type="text" id="username" name="username" value={@user_name}>
-  <button phx-click="gen-random-room">Create new room</button>
+  <button class="btn btn-blue" phx-click="gen-random-room">Create new room</button>
   </form>
   <hr>
   <h2>Know secret code for existing game room?</h2>
   <form phx-submit="enter-room">
   <label for="secret">Secret code:</label>
   <input type="text" id="secret" name="secret">
-  <button>Enter!</button>
+  <button class="btn btn-blue">Enter!</button>
   </form>
 </section>
